--- a/index.html
+++ b/index.html
@@ -8,30 +8,44 @@
     </head>
     <body style="background-color: powderblue;">
         <main>
-            <h1 style="color:purple;text-align: center;">How to sleep</h1>
-            
+            <h1 style="color:purple;text-align: center;">Class 1 Lab </h1>
+            <h2 style="color:purple;text-align: center;">How to sleep</h2>
             <script>
                 let username = prompt ("What is your name?");
+                console.log(username);
                 let age = prompt("How old are you?");
+                console.log(age);
                 let sleepdisorders = prompt("do you suffer from sleep disorders?");
+                console.log('sleep disorder '+sleepdisorders);
                 if(sleepdisorders == "yes"){
                     alert("pleas read carfuly, this page might help");
+                    console.log("pleas read carfuly, this page might help");
                 }
                 if(sleepdisorders == "no"){
                     alert("this page might not be this useful for you");
+                    console.log("this page might not be this useful for you");
                 }
                 let sleepcorriction = prompt("would you like to find the cause?")
+                console.log('sleep corriction '+sleepcorriction);
                 if(sleepcorriction =="yes"){
-                    let solution = prompt("would you like to git a solution?")
+                    let solution = prompt("would you like to git a solution?");
+                    console.log("would you like to git a solution? "+solution);
                 }
                 else{
-                    let nocause = prompt("why are you here?")
+                    let nocause = prompt("why are you here?");
+                    console.log("why are you here? "+nocause);
                 }
-                alert("enjoy your reading<3")
+                alert("enjoy your reading<3");
+                console.log("enjoy your reading<3");
                 if(solution == "yes"){
-                    alert("you're in the right place!")
+                    alert("you're in the right place!");
+                    console.log("you're in the right place!");
                 }
             </script>
+            <p style="font-size: small;color: brown;">"why are you here?"</p>
+            <p style="font-size: small;color: brown;">"do you suffer from sleep disorders?"</p>
+            <p style="font-size: small;color: brown;">"would you like to find the cause?"</p>
+            <p style="font-size: small;color: brown;">"would you like to git a solution?"</p>
             <p style="color: rgb(190, 67, 190);text-align: center;font-size: large;">
                 Sleep time lets us rest, restore, repair, and it may even keep our brains young and “plastic.” Understanding the importance of sleep is a key step in knowing how to sleep better.
              </p>
