hopfully full mark

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
                     console.log("you're in the right place!");
                 }
             </script>
-            <p style="font-size: small;color: brown;">"why are you here?"</p>
-            <p style="font-size: small;color: brown;">"do you suffer from sleep disorders?"</p>
-            <p style="font-size: small;color: brown;">"would you like to find the cause?"</p>
-            <p style="font-size: small;color: brown;">"would you like to git a solution?"</p>
-            <p style="color: rgb(190, 67, 190);text-align: center;font-size: large;">
+            <p style="font-size: small;color: brown;background-color: darkgray;">"why are you here?"</p>
+            <p style="font-size: small;color: black;background-color: darksalmon;">"do you suffer from sleep disorders?"</p>
+            <p style="font-size: small;color: burlywood;background-color: darkslategrey;">"would you like to find the cause?"</p>
+            <p style="font-size: small;color: chocolate;background-color: rgb(99, 1, 99);">"would you like to git a solution?"</p>
+            <p style="color: rgb(190, 67, 190);text-align: center;font-size: large;background-color: purple;">
                 Sleep time lets us rest, restore, repair, and it may even keep our brains young and “plastic.” Understanding the importance of sleep is a key step in knowing how to sleep better.
              </p>
              <img src="https://i.pinimg.com/originals/bf/ea/5e/bfea5ef633e85c8739439da311a5c7a4.jpg"/>
@@ -117,7 +117,7 @@
                 <li style="color: rgb(99, 1, 99);">Eat Well.</li>
                 <li style="color: rgb(99, 1, 99);">Exercise.</li>
             </ul>
-            <p style="color: cadetblue;text-align: center;font-size: x-large;">
+            <p style="color: cadetblue;text-align: center;font-size: x-large;background-color: whitesmoke;">
                 and finally, not all the sleep disorders can be solved this easily, some of them requires a medical attention.
                 I want from you to keep yourselves in a good shape and health, and please stay safe.
             </p>
